# Build-AI-Context

./: .gitignore  LICENSE  README.md  build.sh  pyproject.toml
.github/workflows/: python-publish.yml
src/anything_to_text/: __init__.py  cli.py  constants.py  exporter.py  models.py  redact.py
src/build_ai_context/: __init__.py  chunking.py  cli.py  cli_ui.py  constants.py  exporter.py  filetree.py  icons.py  models.py  redact.py  scanner.py  writing.py
tests/: __init__.py  test_comprehensive.py  test_constants.py  test_exporter.py  test_icons_and_filetree.py  test_redact.py  test_scanner.py
